--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <div></div>
         <script src="controller.js" async defer></script>
     </body>
 </html>
