--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-
-<html class="no-js"> 
+<html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Starter Game</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700" rel="stylesheet">
+        <title>TODO List</title>
     </head>
     <body>
-        <div></div>
-        <script src="controller.js" async defer></script>
+        <div class="MainContainer">
+            <div class="TheTODOList">
+                <span class="TODOHeader" class="TODO">
+                    <input type="text" class="myInput" placeholder="Title...">
+                    <button class='addBtn'>Add</button>
+                </span>
+                <span class="TODOMiddleSection" class="TODO">
+                    <ul class="myUL">
+
+                    </ul>
+                </span>
+                <span class="TODOBottomSection" class="TODO">
+                    
+                </span>
+            </div>
+        </div>
     </body>
 </html>
