Added cat facts!

--- a/src/index.html
+++ b/src/index.html
@@ -27,5 +27,9 @@
                 </span>
             </div>
         </div>
+        <div class="Section2">
+            <span class="catFacts">
+            </span>
+        </div>
     </body>
 </html>
