--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
             </div>
         </div>
         <div class="Section2">
+            <button class="getMoreCatFacts btn btn-info" data-toggle="tooltip" ata-placement="top" title="You need more cat facts!!">Get More Cat Facts</button>
+            <br>
             <span class="catFacts">
             </span>
         </div>
