Added nav and search bars

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,29 @@
         <title>TODO List</title>
     </head>
     <body>
+        <div class="Header">
+            <div class="pos-f-t">
+                <div class="collapse" id="navbarToggleExternalContent">
+                  <div class="bg-dark p-4">
+                    <h4 class="text-white">Collapsed content</h4>
+                    <span class="text-muted">Toggleable via the navbar brand.</span>
+                  </div>
+                </div>
+                <nav class="navbar navbar-dark bg-dark">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </nav>
+            </div>
+            <div class="search">
+                <nav class="navbar navbar-dark bg-dark justify-content-between">
+                    <form class="form-inline">
+                        <input class="form-control mr-sm-3" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                </nav>
+            </div>
+        </div>
         <div class="MainContainer ">
             <div class="TheTODOList">
                 <span class="TODO TODOHeader">
@@ -26,12 +49,15 @@
                 
                 </span>
             </div>
-        </div>
-        <div class="Section2">
-            <button class="getMoreCatFacts btn btn-info" data-toggle="tooltip" ata-placement="top" title="You need more cat facts!!">Get More Cat Facts</button>
-            <br>
-            <span class="catFacts">
-            </span>
+            <div class="Section2">
+                <button class="getMoreCatFacts btn btn-info" data-toggle="tooltip" ata-placement="top" title="You need more cat facts!!">Get More Cat Facts</button>
+                <br>
+                <span class="catFacts">
+                </span>
+            </div>
+            <div class="Section3">
+                Third
+            </div>
         </div>
     </body>
 </html>
